
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct udphdr {int dummy; } ;
struct iphdr {int ihl; int version; int tot_len; int saddr; scalar_t__ check; int protocol; int ttl; scalar_t__ frag_off; int id; scalar_t__ tos; } ;


 int IPPROTO_UDP ;
 int MAXTTL ;
 int htonl (int) ;
 int inet_addr (char*) ;

void setup_ip_header(struct iphdr *iph)
{
 iph->ihl = 5;
 iph->version = 4;
 iph->tos = 0;
 iph->tot_len = sizeof(struct iphdr) + sizeof(struct udphdr) + 15;
 iph->id = htonl(54321);
 iph->frag_off = 0;
 iph->ttl = MAXTTL;
 iph->protocol = IPPROTO_UDP;
 iph->check = 0;
 iph->saddr = inet_addr("192.168.3.100");
}
