; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_44264.c_setup_ip_header.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_44264.c_setup_ip_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iphdr = type { i32, i32, i32, i32, i64, i32, i32, i64, i32, i64 }

@MAXTTL = common dso_local global i32 0, align 4
@IPPROTO_UDP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"192.168.3.100\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_ip_header(%struct.iphdr* %0) #0 {
  %2 = alloca %struct.iphdr*, align 8
  store %struct.iphdr* %0, %struct.iphdr** %2, align 8
  %3 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %4 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %3, i32 0, i32 0
  store i32 5, i32* %4, align 8
  %5 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %6 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %5, i32 0, i32 1
  store i32 4, i32* %6, align 4
  %7 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %8 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %7, i32 0, i32 9
  store i64 0, i64* %8, align 8
  %9 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %10 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %9, i32 0, i32 2
  store i32 75, i32* %10, align 8
  %11 = call i32 @htonl(i32 54321)
  %12 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %13 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %12, i32 0, i32 8
  store i32 %11, i32* %13, align 8
  %14 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %15 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %14, i32 0, i32 7
  store i64 0, i64* %15, align 8
  %16 = load i32, i32* @MAXTTL, align 4
  %17 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %18 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %17, i32 0, i32 6
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @IPPROTO_UDP, align 4
  %20 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %21 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %20, i32 0, i32 5
  store i32 %19, i32* %21, align 8
  %22 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %23 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %22, i32 0, i32 4
  store i64 0, i64* %23, align 8
  %24 = call i32 @inet_addr(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %25 = load %struct.iphdr*, %struct.iphdr** %2, align 8
  %26 = getelementptr inbounds %struct.iphdr, %struct.iphdr* %25, i32 0, i32 3
  store i32 %24, i32* %26, align 4
  ret void
}

declare dso_local i32 @htonl(i32) #1

declare dso_local i32 @inet_addr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
